<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:title="@string/app_title"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/primaryDark"
        android:text="@string/addition"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryDark"
        android:text="@string/subtraction"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryDark"
        android:text="@string/multiplication"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryDark"
        android:text="@string/division"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>